--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awesome Fruits Online Store Programming Hero Assignment 3</title>
 
-    <!-- Tailwind CSS framework  -->
+    <!--Install Tailwind CSS framework and daisyUi CSS Component library  -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script>
         tailwind.config = {
             theme: {
@@ -35,8 +36,23 @@
 
 </head>
 
-<body>
+<body class="font-lato">
 
+    <header>
+
+        <nav>
+
+        </nav>
+
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 
 </body>
 
