--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
+                        navcolor: '#F85559',
                     }
                 }
             }
         }
     </script>
-
 
     <!-- Google lato font import -->
     <style>
@@ -33,15 +33,36 @@
         }
     </style>
 
+    <!-- Font awesome font installation  -->
+    <script src="https://kit.fontawesome.com/84dd1579d4.js" crossorigin="anonymous"></script>
+
 
 </head>
 
-<body class="font-lato">
+<body class="font-lato ml-60 mr-60 mt-8">
+    <header class="">
+        <nav class="bg-[#F85559] border-2 border-[#F85559] rounded-full text-white">
+            <div class="navbar justify-between items-stretch">
+                <div class="w-1/3 pl-14">
+                    <ul class="flex">
+                        <li class="pr-5 pl-5">Home</li>
+                        <li class="pr-5 pl-5">About Us</li>
+                        <li class="pr-5 pl-5">Shop</li>
+                        <li class="pr-5 pl-5">All Fruits</li>
+                    </ul>
+                </div>
 
-    <header>
+                <div class="w-1/3 justify-center">
+                    <img src="/images/logo.png" alt="">
+                    <h1>Fruit Burst</h1>
+                </div>
 
-        <nav>
+                <div class="w-1/3 flex-row justify-center relative pr-5">
+                    <input type="text" placeholder="Search here" class="input rounded-full w-full" />
+                    <i class="fa-solid fa-magnifying-glass absolute right-9" style="color: #000000;"></i>
+                </div>
 
+            </div>
         </nav>
 
     </header>
