--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 
 </head>
 
-<body class="font-lato ml-60 mr-60 mt-8">
-    <header class="">
+<body class="font-lato ml-60 mr-60 mt-8 border-4 border-black">
+    <header class="border-4 border-red-800">
+        <!-- navigation bar design  -->
         <nav class="bg-[#F85559] border-2 border-[#F85559] rounded-full text-white">
             <div class="navbar justify-between items-stretch">
                 <div class="w-1/3 pl-14">
@@ -64,16 +65,108 @@
 
             </div>
         </nav>
-
     </header>
 
+
     <main>
+        <!-- banner part design  -->
+        <section class="mt-14 relative border-4 border-red-800">
+            <div class="carousel w-full h-full"> <!---Carousel part-->
+                <div id="slide1" class="carousel-item relative w-full h-full">
+                    <img src="/images/banner1.png" class="w-full" alt="" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide4" class="btn btn-circle btn-neutral">❮</a>
+                        <a href="#slide2" class="btn btn-circle btn-neutral">❯</a>
+                    </div>
+                </div>
+                <div id="slide2" class="carousel-item relative w-full h-full">
+                    <img src="/images/banner2.png" class="w-full" alt="" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide1" class="btn btn-circle btn-neutral">❮</a>
+                        <a href="#slide3" class="btn btn-circle btn-neutral">❯</a>
+                    </div>
+                </div>
+                <div id="slide3" class="carousel-item relative w-full h-full">
+                    <img src="/images/banner3.png" class="w-full" alt="" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide2" class="btn btn-circle btn-neutral">❮</a>
+                        <a href="#slide4" class="btn btn-circle btn-neutral">❯</a>
+                    </div>
+                </div>
+                <div id="slide4" class="carousel-item relative w-full h-full">
+                    <img src="/images/banner4.png" class="w-full" alt="" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide3" class="btn btn-circle">❮</a>
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+            </div>
+
+            <!---Exotic part-->
+            <div class="absolute left-[380px] top-0 text-white">
+                <div class="flex-col justify-center items-center relative">
+                    <h1 class="font-extrabold text-7xl text-center">Exotic tastes at your <br>
+                        doorstep</h1>
+                    <p class="font-medium text-xl text-center">We supply highly quality organic
+                        products</p>
+                    <button class="absolute btn text-center left-1/2 w-auto">Shop Now</button>
+                </div>
+            </div>
+
+            <!---Fruit lower part-->
+            <div
+                class="absolute w-10/12 top-[510px] left-[122px] border-4 border-white rounded-lg bg-white flex justify-between shadow-lg shadow-black">
+                <div class="flex-col">
+                    <img src="/images/fruit1.png" alt="">
+                    <h2>Grape</h2>
+                </div>
+                <div class="flex-col">
+                    <img src="/images/fruit2.png" alt="">
+                    <h2>Orange</h2>
+                </div>
+                <div class="flex-col">
+                    <img src="/images/fruit3.png" alt="">
+                    <h2>Mango</h2>
+                </div>
+                <div class="flex-col">
+                    <img src="/images/fruit4.png" alt="">
+                    <h2>Strawberry</h2>
+                </div>
+                <div class="flex-col">
+                    <img src="/images/fruit5.png" alt="">
+                    <h2>Mango</h2>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="text-black m-36 w-max  border-4 border-red-800">
+            <div>
+                <div>
+                    <h1 class="text-7xl"> Deal of the day</h1>
+                    <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin
+                        literature from 45 BC, making it over 2000 years old.
+                    </p>
+                </div>
+                <div></div>
+            </div>
+            <div>
+
+                <div class="card w-96 bg-base-100 shadow-xl">
+                    <figure><img src="/images/fruit8.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title">Shoes!</h2>
+                        <p>If a dog chews shoes whose shoes does he choose?</p>
+                        <div class="card-actions justify-end">
+                            <button class="btn btn-primary">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
 
     </main>
-
-    <footer>
-
-    </footer>
 
 </body>
 
