doing some works on sec 2

--- a/index.html
+++ b/index.html
@@ -140,30 +140,39 @@
         </section>
 
 
-        <section class="text-black m-36 w-max  border-4 border-red-800">
-            <div>
-                <div>
-                    <h1 class="text-7xl"> Deal of the day</h1>
-                    <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin
+        <section class="text-black mt-36 border-4 border-red-800">
+            <div class="flex border-4 border-red-500">
+                <div class="border-4 border-red-300 w-2/3">
+                    <h1 class="text-5xl font-extrabold mb-7"> Deal of the day</h1>
+                    <p class="text-xl">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin
                         literature from 45 BC, making it over 2000 years old.
                     </p>
                 </div>
-                <div></div>
-            </div>
-            <div>
 
-                <div class="card w-96 bg-base-100 shadow-xl">
-                    <figure><img src="/images/fruit8.png" alt="Shoes" /></figure>
-                    <div class="card-body">
-                        <h2 class="card-title">Shoes!</h2>
-                        <p>If a dog chews shoes whose shoes does he choose?</p>
-                        <div class="card-actions justify-end">
-                            <button class="btn btn-primary">Buy Now</button>
-                        </div>
+                <!-- countdown part  -->
+                <div class="flex flex-row gap-10 font-extrabold">
+                    <div class="flex flex-col justify-center">
+                        <h1 class="text-5xl">29</h1>
+                        <p class="text-xl">Days</p>
+                    </div>
+                    <div class="text-5xl text-center">:</div>
+                    <div class="flex flex-col justify-center">
+                        <h1 class="text-5xl">15</h1>
+                        <p class="text-xl">Hours</p>
+                    </div>
+                    <div class="text-5xl">:</div>
+                    <div class="flex flex-col justify-center">
+                        <h1 class="text-5xl">25</h1>
+                        <p class="text-xl">Minutes</p>
+                    </div>
+                    <div class="text-5xl">:</div>
+                    <div class="flex flex-col justify-center">
+                        <h1 class="text-5xl">08</h1>
+                        <p class="text-xl">Seconds</p>
                     </div>
                 </div>
-
             </div>
+            
         </section>
 
     </main>
