--- a/index.html
+++ b/index.html
@@ -104,18 +104,18 @@
 
             <!---Exotic part-->
             <div class="absolute left-[380px] top-0 text-white">
-                <div class="flex-col justify-center items-center relative">
-                    <h1 class="font-extrabold text-7xl text-center">Exotic tastes at your <br>
+                <div class="flex flex-col items-center">
+                    <h1 class="font-extrabold text-7xl text-center mb-6">Exotic tastes at your <br>
                         doorstep</h1>
-                    <p class="font-medium text-xl text-center">We supply highly quality organic
+                    <p class="font-medium text-xl text-center mb-8">We supply highly quality organic
                         products</p>
-                    <button class="absolute btn text-center left-1/2 w-auto">Shop Now</button>
+                    <button class="btn bg-[#F85559] border-0 text-white h-16 w-40">Shop Now</button>
                 </div>
             </div>
 
             <!---Fruit lower part-->
             <div
-                class="absolute w-10/12 top-[510px] left-[122px] border-4 border-white rounded-lg bg-white flex justify-between shadow-lg shadow-black">
+                class="absolute w-10/12 top-[510px] left-[122px] border-4 border-white rounded-lg bg-white flex justify-between shadow-xl">
                 <div class="flex-col">
                     <img src="/images/fruit1.png" alt="">
                     <h2>Grape</h2>
@@ -140,39 +140,61 @@
         </section>
 
 
-        <section class="text-black mt-36 border-4 border-red-800">
-            <div class="flex border-4 border-red-500">
-                <div class="border-4 border-red-300 w-2/3">
+        <!-- Deal off day section  -->
+        <section class="text-black mt-36 mx-5">
+            <div class="flex flex-row">
+                <!-- Deal off day part  -->
+                <div class="w-2/3 pr-96">
                     <h1 class="text-5xl font-extrabold mb-7"> Deal of the day</h1>
-                    <p class="text-xl">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin
-                        literature from 45 BC, making it over 2000 years old.
+                    <p class="text-xl">Hurrly Up this is the best deal of Ours. Time is ticking
                     </p>
                 </div>
 
                 <!-- countdown part  -->
-                <div class="flex flex-row gap-10 font-extrabold">
-                    <div class="flex flex-col justify-center">
+                <div class="flex flex-row gap-10 font-extrabold items-center">
+                    <div class="flex flex-col items-center w-1/6">
                         <h1 class="text-5xl">29</h1>
-                        <p class="text-xl">Days</p>
+                        <p class="text-xl font-medium">Days</p>
                     </div>
-                    <div class="text-5xl text-center">:</div>
-                    <div class="flex flex-col justify-center">
+                    <div class="text-5xl text-center w-1/6">:</div>
+                    <div class="flex flex-col items-center w-1/6">
                         <h1 class="text-5xl">15</h1>
-                        <p class="text-xl">Hours</p>
+                        <p class="text-xl font-medium">Hours</p>
                     </div>
-                    <div class="text-5xl">:</div>
-                    <div class="flex flex-col justify-center">
+                    <div class="text-5xl w-1/6">:</div>
+                    <div class="flex flex-col items-center w-1/6">
                         <h1 class="text-5xl">25</h1>
-                        <p class="text-xl">Minutes</p>
+                        <p class="text-xl font-medium">Minutes</p>
                     </div>
-                    <div class="text-5xl">:</div>
-                    <div class="flex flex-col justify-center">
+                    <div class="text-5xl w-1/6">:</div>
+                    <div class="flex flex-col items-center w-1/6">
                         <h1 class="text-5xl">08</h1>
-                        <p class="text-xl">Seconds</p>
+                        <p class="text-xl font-medium">Seconds</p>
                     </div>
                 </div>
             </div>
-            
+            <!-- Cards part  -->
+            <div class="card-normal w-96 bg-base-100 shadow-xl border-2 rounded-xl">
+                <div class="card-body flex flex-col items-center">
+                    <img src="/images/fruit6.png" alt="Shoes" class="w-28 h-28" />
+                    <h1 class="card-title">12.90$ - 18.85$</h1>
+                    <h2 class="border-t-2 w-full text-center">Apple</h2>
+                    <div class="flex flex-row">
+                        <i class="fa-regular fa-star-half-stroke star"></i>
+                        <i class="fa-regular fa-star-half-stroke "></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <h2 class="">Details</h2>
+                </div>
+            </div>
+            <div class="card-actions justify-center">
+                <button class="btn btn-primary">Buy Now</button>
+            </div>
+
+
+
         </section>
 
     </main>
