From sec 1 to 3 done

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
     </style>
 
+    <link rel="stylesheet" href="custom_style.css">
+
     <style>
         .font-lato {
             font-family: 'Lato', sans-serif;
@@ -141,7 +143,7 @@
 
 
         <!-- Deal off day section  -->
-        <section class="text-black mt-36 mx-5">
+        <section class="text-black mt-36 px-5 border-4 border-red-800">
             <div class="flex flex-row">
                 <!-- Deal off day part  -->
                 <div class="w-2/3 pr-96">
@@ -173,27 +175,81 @@
                     </div>
                 </div>
             </div>
+
             <!-- Cards part  -->
-            <div class="card-normal w-96 bg-base-100 shadow-xl border-2 rounded-xl">
-                <div class="card-body flex flex-col items-center">
-                    <img src="/images/fruit6.png" alt="Shoes" class="w-28 h-28" />
-                    <h1 class="card-title">12.90$ - 18.85$</h1>
-                    <h2 class="border-t-2 w-full text-center">Apple</h2>
-                    <div class="flex flex-row">
-                        <i class="fa-regular fa-star-half-stroke star"></i>
-                        <i class="fa-regular fa-star-half-stroke "></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
+            <div class="flex flex-row gap-6 justify-center mt-12">
+                <!-- card 1  -->
+                <div class="card-normal bg-base-100 shadow-xl border-2 rounded-xl w-1/4">
+                    <div class="card-body flex flex-col items-center">
+                        <img src="/images/fruit6.png" alt="Shoes" class="w-28 h-28 mb-12" />
+                        <h1 class="card-title mb-10">12.90$ - 18.85$</h1>
+                        <h2 class="border-t-2 w-full text-center mb-3">Apple</h2>
+                        <div class="flex flex-row mb-8">
+                            <i class="fa-regular fa-star-half-stroke star_color"></i>
+                            <i class="fa-regular fa-star-half-stroke star_color"></i>
+                            <i class="fa-solid fa-star star_color star_color"></i>
+                            <i class="fa-solid fa-star star_color star_color"></i>
+                            <i class="fa-solid fa-star star_color star_color"></i>
+                        </div>
+                        <h2 class="primary_color">Details</h2>
                     </div>
-                    <h2 class="">Details</h2>
+                </div>
+
+                <!-- card 2  -->
+                <div class="card-normal bg-base-100 shadow-xl border-2 rounded-xl w-1/4">
+                    <div class="card-body flex flex-col items-center">
+                        <img src="/images/fruit7.png" alt="Shoes" class="w-28 h-28 mb-12" />
+                        <h1 class="card-title mb-10">12.90$ - 18.85$</h1>
+                        <h2 class="border-t-2 w-full text-center mb-3">Orange</h2>
+                        <div class="flex flex-row mb-8">
+                            <i class="fa-regular fa-star-half-stroke star_color"></i>
+                            <i class="fa-regular fa-star-half-stroke star_color"></i>
+                            <i class="fa-solid fa-star star_color star_color"></i>
+                            <i class="fa-solid fa-star star_color star_color"></i>
+                            <i class="fa-solid fa-star star_color star_color"></i>
+                        </div>
+                        <h2 class="primary_color">Details</h2>
+                    </div>
+                </div>
+
+                <!-- card 3  -->
+                <div class="card-normal bg-base-100 shadow-xl border-2 rounded-xl w-1/4">
+                    <div class="card-body flex flex-col items-center">
+                        <img src="/images/fruit8.png" alt="Shoes" class="w-28 h-28 mb-12" />
+                        <h1 class="card-title mb-10">12.90$ - 18.85$</h1>
+                        <h2 class="border-t-2 w-full text-center mb-3">Red Dragon</h2>
+                        <div class="flex flex-row mb-8">
+                            <i class="fa-regular fa-star-half-stroke star_color"></i>
+                            <i class="fa-regular fa-star-half-stroke star_color"></i>
+                            <i class="fa-solid fa-star star_color star_color"></i>
+                            <i class="fa-solid fa-star star_color star_color"></i>
+                            <i class="fa-solid fa-star star_color star_color"></i>
+                        </div>
+                        <h2 class="primary_color">Details</h2>
+                    </div>
+                </div>
+
+                <!-- card 4  -->
+                <div class="card-normal bg-base-100 shadow-xl border-2 rounded-xl w-1/4">
+                    <div class="card-body flex flex-col items-center">
+                        <img src="/images/fruit9.png" alt="Shoes" class="w-28 h-28 mb-12" />
+                        <h1 class="card-title mb-10">12.90$ - 18.85$</h1>
+                        <h2 class="border-t-2 w-full text-center mb-3">Banana</h2>
+                        <div class="flex flex-row mb-8">
+                            <i class="fa-regular fa-star-half-stroke star_color"></i>
+                            <i class="fa-regular fa-star-half-stroke star_color"></i>
+                            <i class="fa-solid fa-star star_color star_color"></i>
+                            <i class="fa-solid fa-star star_color star_color"></i>
+                            <i class="fa-solid fa-star star_color star_color"></i>
+                        </div>
+                        <h2 class="primary_color">Details</h2>
+                    </div>
                 </div>
             </div>
-            <div class="card-actions justify-center">
-                <button class="btn btn-primary">Buy Now</button>
+
+            <div class="card-actions justify-center mt-12">
+                <button class="btn btn-primary bg-[#F85559] text-white border-0">Shop All</button>
             </div>
-
-
 
         </section>
 
