add input buttons of rating in section 2

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 </head>
 
 <body class="font-lato ml-60 mr-60 mt-8 border-4 border-black">
+
     <header class="border-4 border-red-800">
         <!-- navigation bar design  -->
         <nav class="bg-[#F85559] border-2 border-[#F85559] rounded-full text-white">
@@ -184,12 +185,20 @@
                         <img src="/images/fruit6.png" alt="Shoes" class="w-28 h-28 mb-12" />
                         <h1 class="card-title mb-10">12.90$ - 18.85$</h1>
                         <h2 class="border-t-2 w-full text-center mb-3">Apple</h2>
-                        <div class="flex flex-row mb-8">
-                            <i class="fa-regular fa-star-half-stroke star_color"></i>
-                            <i class="fa-regular fa-star-half-stroke star_color"></i>
-                            <i class="fa-solid fa-star star_color star_color"></i>
-                            <i class="fa-solid fa-star star_color star_color"></i>
-                            <i class="fa-solid fa-star star_color star_color"></i>
+                        <div class="rating rating-half">
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                                checked />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                                checked />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                                checked />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
                         </div>
                         <h2 class="primary_color">Details</h2>
                     </div>
@@ -201,12 +210,20 @@
                         <img src="/images/fruit7.png" alt="Shoes" class="w-28 h-28 mb-12" />
                         <h1 class="card-title mb-10">12.90$ - 18.85$</h1>
                         <h2 class="border-t-2 w-full text-center mb-3">Orange</h2>
-                        <div class="flex flex-row mb-8">
-                            <i class="fa-regular fa-star-half-stroke star_color"></i>
-                            <i class="fa-regular fa-star-half-stroke star_color"></i>
-                            <i class="fa-solid fa-star star_color star_color"></i>
-                            <i class="fa-solid fa-star star_color star_color"></i>
-                            <i class="fa-solid fa-star star_color star_color"></i>
+                        <div class="rating rating-half">
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                                checked />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                                checked />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                                checked />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
                         </div>
                         <h2 class="primary_color">Details</h2>
                     </div>
@@ -218,12 +235,20 @@
                         <img src="/images/fruit8.png" alt="Shoes" class="w-28 h-28 mb-12" />
                         <h1 class="card-title mb-10">12.90$ - 18.85$</h1>
                         <h2 class="border-t-2 w-full text-center mb-3">Red Dragon</h2>
-                        <div class="flex flex-row mb-8">
-                            <i class="fa-regular fa-star-half-stroke star_color"></i>
-                            <i class="fa-regular fa-star-half-stroke star_color"></i>
-                            <i class="fa-solid fa-star star_color star_color"></i>
-                            <i class="fa-solid fa-star star_color star_color"></i>
-                            <i class="fa-solid fa-star star_color star_color"></i>
+                        <div class="rating rating-half">
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                                checked />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                                checked />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                                checked />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
                         </div>
                         <h2 class="primary_color">Details</h2>
                     </div>
@@ -235,12 +260,20 @@
                         <img src="/images/fruit9.png" alt="Shoes" class="w-28 h-28 mb-12" />
                         <h1 class="card-title mb-10">12.90$ - 18.85$</h1>
                         <h2 class="border-t-2 w-full text-center mb-3">Banana</h2>
-                        <div class="flex flex-row mb-8">
-                            <i class="fa-regular fa-star-half-stroke star_color"></i>
-                            <i class="fa-regular fa-star-half-stroke star_color"></i>
-                            <i class="fa-solid fa-star star_color star_color"></i>
-                            <i class="fa-solid fa-star star_color star_color"></i>
-                            <i class="fa-solid fa-star star_color star_color"></i>
+                        <div class="rating rating-half">
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                                checked />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                                checked />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                                checked />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
                         </div>
                         <h2 class="primary_color">Details</h2>
                     </div>
@@ -250,7 +283,20 @@
             <div class="card-actions justify-center mt-12">
                 <button class="btn btn-primary bg-[#F85559] text-white border-0">Shop All</button>
             </div>
+        </section>
 
+        <!-- Meet the tem section  -->
+        <section class="border-4 mt-36 border-red-800">
+            <div class="hero min-h-screen bg-[url(/images/team.png)]">
+                <div class="hero-overlay bg-opacity-60"></div>
+                <div class="hero-content text-center text-neutral-content">
+                    <div class="max-w-md">
+                        <h1 class="mb-5 text-5xl font-bold">Meet the team section</h1>
+                        <p class="mb-5">Here is Our most talented team who are the key people of Our</p>
+
+                    </div>
+                </div>
+            </div>
         </section>
 
     </main>
