finish meet the teams section

--- a/index.html
+++ b/index.html
@@ -286,14 +286,56 @@
         </section>
 
         <!-- Meet the tem section  -->
-        <section class="border-4 mt-36 border-red-800">
-            <div class="hero min-h-screen bg-[url(/images/team.png)]">
+        <section class="border-4 mt-36 border-red-800 rounded-lg">
+            <div class="hero bg-[url(/images/team.png)] h-[700px]">
                 <div class="hero-overlay bg-opacity-60"></div>
                 <div class="hero-content text-center text-neutral-content">
-                    <div class="max-w-md">
+                    <div class="">
                         <h1 class="mb-5 text-5xl font-bold">Meet the team section</h1>
-                        <p class="mb-5">Here is Our most talented team who are the key people of Our</p>
-
+                        <p class="mb-5">Here is Our most talented team who are the key people of Our. Everyone here <br> is
+                            as expert as they are and they make Our goal successful</p>
+                        <div class="flex flex-row gap-36">
+                            <div class="flex flex-col items-center">
+                                <img src="/images/member1.png" alt="" class="rounder-full mb-8">
+                                <h1 class="text-2xl mb-2 font-bold">Anwar</h1>
+                                <h1 class="text-xl mb-4 font-medium">Fruits Expert</h1>
+                                <div class="flex flex-row gap-2">
+                                    <i class="fa-brands fa-facebook primary_color fa-xl"></i>
+                                    <i class="fa-brands fa-twitter primary_color fa-xl"></i>
+                                    <i class="fa-brands fa-linkedin primary_color fa-xl"></i>
+                                </div>
+                            </div>
+                            <div class="flex flex-col items-center">
+                                <img src="/images/member2.png" alt="" class="rounder-full mb-8">
+                                <h1 class="text-2xl mb-2 font-bold">Safia Chowdhury</h1>
+                                <h1 class="text-xl mb-4 font-medium">Fruits Expert</h1>
+                                <div class="flex flex-row gap-2">
+                                    <i class="fa-brands fa-facebook primary_color fa-xl"></i>
+                                    <i class="fa-brands fa-twitter primary_color fa-xl"></i>
+                                    <i class="fa-brands fa-linkedin primary_color fa-xl"></i>
+                                </div>
+                            </div>
+                            <div class="flex flex-col items-center">
+                                <img src="/images/member3.png" alt="" class="rounder-full mb-8">
+                                <h1 class="text-2xl mb-2 font-bold">Rokib Hossain</h1>
+                                <h1 class="text-xl mb-4 font-medium">Fruits Expert</h1>
+                                <div class="flex flex-row gap-2">
+                                    <i class="fa-brands fa-facebook primary_color fa-xl"></i>
+                                    <i class="fa-brands fa-twitter primary_color fa-xl"></i>
+                                    <i class="fa-brands fa-linkedin primary_color fa-xl"></i>
+                                </div>
+                            </div>
+                            <div class="flex flex-col items-center">
+                                <img src="/images/member4.png" alt="" class="rounder-full mb-8">
+                                <h1 class="text-2xl mb-2 font-bold">Chaity</h1>
+                                <h1 class="text-xl mb-4 font-medium">Fruits Expert</h1>
+                                <div class="flex flex-row gap-2">
+                                    <i class="fa-brands fa-facebook primary_color fa-xl"></i>
+                                    <i class="fa-brands fa-twitter primary_color fa-xl"></i>
+                                    <i class="fa-brands fa-linkedin primary_color fa-xl"></i>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
