replace with svg

--- a/index.html
+++ b/index.html
@@ -292,7 +292,8 @@
                 <div class="hero-content text-center text-neutral-content">
                     <div class="">
                         <h1 class="mb-5 text-5xl font-bold">Meet the team section</h1>
-                        <p class="mb-5">Here is Our most talented team who are the key people of Our. Everyone here <br> is
+                        <p class="mb-5">Here is Our most talented team who are the key people of Our. Everyone here <br>
+                            is
                             as expert as they are and they make Our goal successful</p>
                         <div class="flex flex-row gap-36">
                             <div class="flex flex-col items-center">
@@ -300,9 +301,9 @@
                                 <h1 class="text-2xl mb-2 font-bold">Anwar</h1>
                                 <h1 class="text-xl mb-4 font-medium">Fruits Expert</h1>
                                 <div class="flex flex-row gap-2">
-                                    <i class="fa-brands fa-facebook primary_color fa-xl"></i>
-                                    <i class="fa-brands fa-twitter primary_color fa-xl"></i>
-                                    <i class="fa-brands fa-linkedin primary_color fa-xl"></i>
+                                    <img src="/images/facebook.svg" alt="">
+                                    <img src="/images/twitter.svg" alt="">
+                                    <img src="/images/linkdin.svg" alt="">
                                 </div>
                             </div>
                             <div class="flex flex-col items-center">
@@ -310,9 +311,9 @@
                                 <h1 class="text-2xl mb-2 font-bold">Safia Chowdhury</h1>
                                 <h1 class="text-xl mb-4 font-medium">Fruits Expert</h1>
                                 <div class="flex flex-row gap-2">
-                                    <i class="fa-brands fa-facebook primary_color fa-xl"></i>
-                                    <i class="fa-brands fa-twitter primary_color fa-xl"></i>
-                                    <i class="fa-brands fa-linkedin primary_color fa-xl"></i>
+                                    <img src="/images/facebook.svg" alt="">
+                                    <img src="/images/twitter.svg" alt="">
+                                    <img src="/images/linkdin.svg" alt="">
                                 </div>
                             </div>
                             <div class="flex flex-col items-center">
@@ -320,9 +321,9 @@
                                 <h1 class="text-2xl mb-2 font-bold">Rokib Hossain</h1>
                                 <h1 class="text-xl mb-4 font-medium">Fruits Expert</h1>
                                 <div class="flex flex-row gap-2">
-                                    <i class="fa-brands fa-facebook primary_color fa-xl"></i>
-                                    <i class="fa-brands fa-twitter primary_color fa-xl"></i>
-                                    <i class="fa-brands fa-linkedin primary_color fa-xl"></i>
+                                    <img src="/images/facebook.svg" alt="">
+                                    <img src="/images/twitter.svg" alt="">
+                                    <img src="/images/linkdin.svg" alt="">
                                 </div>
                             </div>
                             <div class="flex flex-col items-center">
@@ -330,9 +331,9 @@
                                 <h1 class="text-2xl mb-2 font-bold">Chaity</h1>
                                 <h1 class="text-xl mb-4 font-medium">Fruits Expert</h1>
                                 <div class="flex flex-row gap-2">
-                                    <i class="fa-brands fa-facebook primary_color fa-xl"></i>
-                                    <i class="fa-brands fa-twitter primary_color fa-xl"></i>
-                                    <i class="fa-brands fa-linkedin primary_color fa-xl"></i>
+                                    <img src="/images/facebook.svg" alt="">
+                                    <img src="/images/twitter.svg" alt="">
+                                    <img src="/images/linkdin.svg" alt="">
                                 </div>
                             </div>
                         </div>
