completed why choos us sec

--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
             </div>
         </section>
 
+
         <!-- Meet the tem section  -->
         <section class="border-4 mt-36 border-red-800 rounded-lg">
             <div class="hero bg-[url(/images/team.png)] h-[700px]">
@@ -341,6 +342,108 @@
                 </div>
             </div>
         </section>
+
+
+        <!-- Why choose us section  -->
+
+        <section class="mt-36 border-4 border-red-800 rounded-lg">
+            <div class="flex flex-col text-center">
+                <h1 class="text-black text-5xl font-extrabold mb-6">Why Choose Us</h1>
+                <p class="text-[#121212] text-xl font-medium">This is why You choose us over a large number of fruit
+                    retailers in Bangladesh</p>
+                <div class="flex flex-row mt-8">
+                    <div class="w-1/3 flex flex-col gap-12 pl-2">
+                        <div class="flex flex-row h-1/3">
+                            <div
+                                class="w-[60px] h-[60px] rounded-full bg-slate-100 flex flex-col justify-center items-center">
+                                <img src="/images/dedicated.svg" alt="" class="w-6 h-6">
+                            </div>
+                            <div class="w-4/5 ml-8">
+                                <h1 class="text-xl font-extrabold mb-4 text-left">Dedicated Team</h1>
+                                <hr class="w-24">
+                                <p class="text-sm font-medium mt-4 text-left">Professional employees are there for you
+                                    to pick the most amazing and fresh fruits.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="flex flex-row h-1/3">
+                            <div
+                                class="w-[60px] h-[60px] rounded-full bg-slate-100 flex flex-col justify-center items-center">
+                                <img src="/images/love.svg" alt="" class="w-6 h-6">
+                            </div>
+                            <div class="w-4/5 ml-8">
+                                <h1 class="text-xl font-extrabold mb-4 text-left">Fresh is Best</h1>
+                                <hr class="w-24">
+                                <p class="text-sm font-medium mt-4 text-left">Professional employees are there for you
+                                    to pick the most amazing and fresh fruits.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="flex flex-row h-1/3">
+                            <div
+                                class="w-[60px] h-[60px] rounded-full bg-slate-100 flex flex-col justify-center items-center">
+                                <img src="/images/gift.svg" alt="" class="w-6 h-6">
+                            </div>
+                            <div class="w-4/5 ml-8">
+                                <h1 class="text-xl font-extrabold mb-4 text-left">Gift Certificates</h1>
+                                <hr class="w-24">
+                                <p class="text-sm font-medium mt-4 text-left">Professional employees are there for you
+                                    to pick the most amazing and fresh fruits.
+                                </p>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="w-1/3">
+                        <img src="/images/whychoose1.png" alt="">
+                    </div>
+
+                    <div class="w-1/3 flex flex-col gap-12 pl-2">
+                        <div class="flex flex-row-reverse h-1/3">
+                            <div
+                                class="w-[60px] h-[60px] rounded-full bg-slate-100 flex flex-col justify-center items-center">
+                                <img src="/images/supplier.svg" alt="" class="w-6 h-6">
+                            </div>
+                            <div class="w-4/5 ml-8">
+                                <h1 class="text-xl font-extrabold mb-4 text-left">Integrated Supplier</h1>
+                                <hr class="w-24">
+                                <p class="text-sm font-medium mt-4 text-left">Professional employees are there for you
+                                    to pick the most amazing and fresh fruits.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="flex flex-row-reverse h-1/3">
+                            <div
+                                class="w-[60px] h-[60px] rounded-full bg-slate-100 flex flex-col justify-center items-center">
+                                <img src="/images/practice.svg" alt="" class="w-6 h-6">
+                            </div>
+                            <div class="w-4/5 ml-8">
+                                <h1 class="text-xl font-extrabold mb-4 text-left">Sustainable Practice</h1>
+                                <hr class="w-24">
+                                <p class="text-sm font-medium mt-4 text-left">Professional employees are there for you
+                                    to pick the most amazing and fresh fruits.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="flex flex-row-reverse h-1/3">
+                            <div
+                                class="w-[60px] h-[60px] rounded-full bg-slate-100 flex flex-col justify-center items-center">
+                                <img src="/images/benefit.svg" alt="" class="w-6 h-6">
+                            </div>
+                            <div class="w-4/5 ml-8">
+                                <h1 class="text-xl font-extrabold mb-4 text-left">The Benefits Only</h1>
+                                <hr class="w-24">
+                                <p class="text-sm font-medium mt-4 text-left">Professional employees are there for you
+                                    to pick the most amazing and fresh fruits.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+
+
 
     </main>
 
