--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
 </head>
 
-<body class="font-lato ml-60 mr-60 mt-8 border-4 border-black">
+<body class="font-lato mt-8">
 
-    <header class="border-4 border-red-800">
+    <header class=" ml-60 mr-60 border-4">
         <!-- navigation bar design  -->
         <nav class="bg-[#F85559] border-2 border-[#F85559] rounded-full text-white">
             <div class="navbar justify-between items-stretch">
@@ -71,9 +71,9 @@
     </header>
 
 
-    <main>
+    <main class="ml-60 mr-60">
         <!-- banner part design  -->
-        <section class="mt-14 relative border-4 border-red-800">
+        <section class="mt-14 relative">
             <div class="carousel w-full h-full"> <!---Carousel part-->
                 <div id="slide1" class="carousel-item relative w-full h-full">
                     <img src="/images/banner1.png" class="w-full" alt="" />
@@ -144,7 +144,7 @@
 
 
         <!-- Deal off day section  -->
-        <section class="text-black mt-36 px-5 border-4 border-red-800">
+        <section class="text-black mt-36 px-5">
             <div class="flex flex-row">
                 <!-- Deal off day part  -->
                 <div class="w-2/3 pr-96">
@@ -287,8 +287,8 @@
 
 
         <!-- Meet the tem section  -->
-        <section class="border-4 mt-36 border-red-800 rounded-lg">
-            <div class="hero bg-[url(/images/team.png)] h-[700px]">
+        <section class="mt-36 border-2 rounded-lg">
+            <div class="hero bg-[url(/images/team.png)] h-[700px] border-4 rounded-lg">
                 <div class="hero-overlay bg-opacity-60"></div>
                 <div class="hero-content text-center text-neutral-content">
                     <div class="">
@@ -346,7 +346,7 @@
 
         <!-- Why choose us section  -->
 
-        <section class="mt-36 border-4 border-red-800 rounded-lg">
+        <section class="mt-36">
             <div class="flex flex-col text-center">
                 <h1 class="text-black text-5xl font-extrabold mb-6">Why Choose Us</h1>
                 <p class="text-[#121212] text-xl font-medium">This is why You choose us over a large number of fruit
@@ -442,10 +442,32 @@
                     </div>
                 </div>
         </section>
-
-
-
     </main>
+
+    <footer class="bg-[#121212] text-white flex flex-col justify-center items-center mt-36">
+        <div class="flex flex-row justify-center items-center mt-36">
+            <img src="/images/logo.png" alt="" class="m-2">
+            <h1 class="font-bold text-5xl">Fruit Burst</h1>
+        </div>
+        <div class="flex flex-row gap-14 mt-16">
+            <h1>Home</h1>
+            <h1>About Us</h1>
+            <h1>Shop</h1>
+            <h1>All Fruits</h1>
+            <h1>Support</h1>
+            <h1>My Account</h1>
+        </div>
+
+        <div class="flex flex-row gap-10 mt-16 mb-36">
+            <img src="/images/facebook_2.svg" alt="">
+            <img src="/images/twitter_2.svg" alt="">
+            <img src="/images/linkdin_2.svg" alt="">
+            <img src="/images/youtube.svg" alt="">
+            <img src="/images/insta.svg" alt="">
+            <img src="/images/apple.svg" alt="">
+        </div>
+
+    </footer>
 
 </body>
 
