--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <body class="font-lato mt-8">
 
-    <header class=" ml-60 mr-60 border-4">
+    <header class=" ml-60 mr-60">
         <!-- navigation bar design  -->
         <nav class="bg-[#F85559] border-2 border-[#F85559] rounded-full text-white">
             <div class="navbar justify-between items-stretch">
@@ -57,7 +57,7 @@
                 </div>
 
                 <div class="w-1/3 justify-center">
-                    <img src="/images/logo.png" alt="">
+                    <img src="images/logo.png" alt="" class="mr-2">
                     <h1>Fruit Burst</h1>
                 </div>
 
@@ -76,28 +76,28 @@
         <section class="mt-14 relative">
             <div class="carousel w-full h-full"> <!---Carousel part-->
                 <div id="slide1" class="carousel-item relative w-full h-full">
-                    <img src="/images/banner1.png" class="w-full" alt="" />
+                    <img src="images/banner1.png" class="w-full" alt="" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide4" class="btn btn-circle btn-neutral">❮</a>
                         <a href="#slide2" class="btn btn-circle btn-neutral">❯</a>
                     </div>
                 </div>
                 <div id="slide2" class="carousel-item relative w-full h-full">
-                    <img src="/images/banner2.png" class="w-full" alt="" />
+                    <img src="images/banner2.png" class="w-full" alt="" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide1" class="btn btn-circle btn-neutral">❮</a>
                         <a href="#slide3" class="btn btn-circle btn-neutral">❯</a>
                     </div>
                 </div>
                 <div id="slide3" class="carousel-item relative w-full h-full">
-                    <img src="/images/banner3.png" class="w-full" alt="" />
+                    <img src="images/banner3.png" class="w-full" alt="" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide2" class="btn btn-circle btn-neutral">❮</a>
                         <a href="#slide4" class="btn btn-circle btn-neutral">❯</a>
                     </div>
                 </div>
                 <div id="slide4" class="carousel-item relative w-full h-full">
-                    <img src="/images/banner4.png" class="w-full" alt="" />
+                    <img src="images/banner4.png" class="w-full" alt="" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide3" class="btn btn-circle">❮</a>
                         <a href="#slide1" class="btn btn-circle">❯</a>
@@ -120,23 +120,23 @@
             <div
                 class="absolute w-10/12 top-[510px] left-[122px] border-4 border-white rounded-lg bg-white flex justify-between shadow-xl">
                 <div class="flex-col">
-                    <img src="/images/fruit1.png" alt="">
+                    <img src="images/fruit1.png" alt="">
                     <h2>Grape</h2>
                 </div>
                 <div class="flex-col">
-                    <img src="/images/fruit2.png" alt="">
+                    <img src="images/fruit2.png" alt="">
                     <h2>Orange</h2>
                 </div>
                 <div class="flex-col">
-                    <img src="/images/fruit3.png" alt="">
+                    <img src="images/fruit3.png" alt="">
                     <h2>Mango</h2>
                 </div>
                 <div class="flex-col">
-                    <img src="/images/fruit4.png" alt="">
+                    <img src="images/fruit4.png" alt="">
                     <h2>Strawberry</h2>
                 </div>
                 <div class="flex-col">
-                    <img src="/images/fruit5.png" alt="">
+                    <img src="images/fruit5.png" alt="">
                     <h2>Mango</h2>
                 </div>
             </div>
@@ -182,10 +182,10 @@
                 <!-- card 1  -->
                 <div class="card-normal bg-base-100 shadow-xl border-2 rounded-xl w-1/4">
                     <div class="card-body flex flex-col items-center">
-                        <img src="/images/fruit6.png" alt="Shoes" class="w-28 h-28 mb-12" />
+                        <img src="images/fruit6.png" alt="Shoes" class="w-28 h-28 mb-12" />
                         <h1 class="card-title mb-10">12.90$ - 18.85$</h1>
                         <h2 class="border-t-2 w-full text-center mb-3">Apple</h2>
-                        <div class="rating rating-half">
+                        <div class="rating rating-half mb-8">
                             <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1"
                                 checked />
                             <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2"
@@ -200,17 +200,37 @@
                             <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
                             <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
                         </div>
-                        <h2 class="primary_color">Details</h2>
+                        <h2 class="primary_color" onclick="modal.showModal()">Details</h2>
+
+                        <dialog id="modal" class="modal">
+                            <form method="dialog" class="modal-box">
+                                <img src="images/fruit6.png" alt="" class="border-2 border-red-800" />
+                                <h1 class="text-5xl">Apple</h1>
+                                <div>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-regular fa-star-half-stroke"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                                <div class="modal-action">
+                                    <!-- if there is a button in form, it will close the modal -->
+                                    <button class="btn btn-outline border-[#F85559] text-[#F85559]">Close</button>
+                                    <button class="btn bg-[#F85559] text-white">Buy Now</button>
+                                </div>
+                            </form>
+                        </dialog>
+
                     </div>
                 </div>
 
                 <!-- card 2  -->
                 <div class="card-normal bg-base-100 shadow-xl border-2 rounded-xl w-1/4">
                     <div class="card-body flex flex-col items-center">
-                        <img src="/images/fruit7.png" alt="Shoes" class="w-28 h-28 mb-12" />
+                        <img src="images/fruit7.png" alt="Shoes" class="w-28 h-28 mb-12" />
                         <h1 class="card-title mb-10">12.90$ - 18.85$</h1>
                         <h2 class="border-t-2 w-full text-center mb-3">Orange</h2>
-                        <div class="rating rating-half">
+                        <div class="rating rating-half mb-8">
                             <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1"
                                 checked />
                             <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2"
@@ -232,10 +252,10 @@
                 <!-- card 3  -->
                 <div class="card-normal bg-base-100 shadow-xl border-2 rounded-xl w-1/4">
                     <div class="card-body flex flex-col items-center">
-                        <img src="/images/fruit8.png" alt="Shoes" class="w-28 h-28 mb-12" />
+                        <img src="images/fruit8.png" alt="Shoes" class="w-28 h-28 mb-12" />
                         <h1 class="card-title mb-10">12.90$ - 18.85$</h1>
                         <h2 class="border-t-2 w-full text-center mb-3">Red Dragon</h2>
-                        <div class="rating rating-half">
+                        <div class="rating rating-half mb-8">
                             <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1"
                                 checked />
                             <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2"
@@ -257,10 +277,10 @@
                 <!-- card 4  -->
                 <div class="card-normal bg-base-100 shadow-xl border-2 rounded-xl w-1/4">
                     <div class="card-body flex flex-col items-center">
-                        <img src="/images/fruit9.png" alt="Shoes" class="w-28 h-28 mb-12" />
+                        <img src="images/fruit9.png" alt="Shoes" class="w-28 h-28 mb-12" />
                         <h1 class="card-title mb-10">12.90$ - 18.85$</h1>
                         <h2 class="border-t-2 w-full text-center mb-3">Banana</h2>
-                        <div class="rating rating-half">
+                        <div class="rating rating-half mb-8">
                             <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1"
                                 checked />
                             <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2"
@@ -288,7 +308,7 @@
 
         <!-- Meet the tem section  -->
         <section class="mt-36 border-2 rounded-lg">
-            <div class="hero bg-[url(/images/team.png)] h-[700px] border-4 rounded-lg">
+            <div class="hero bg-[url(images/team.png)] h-[700px] border-4 rounded-lg">
                 <div class="hero-overlay bg-opacity-60"></div>
                 <div class="hero-content text-center text-neutral-content">
                     <div class="">
@@ -298,43 +318,43 @@
                             as expert as they are and they make Our goal successful</p>
                         <div class="flex flex-row gap-36">
                             <div class="flex flex-col items-center">
-                                <img src="/images/member1.png" alt="" class="rounder-full mb-8">
+                                <img src="images/member1.png" alt="" class="rounder-full mb-8">
                                 <h1 class="text-2xl mb-2 font-bold">Anwar</h1>
                                 <h1 class="text-xl mb-4 font-medium">Fruits Expert</h1>
                                 <div class="flex flex-row gap-2">
-                                    <img src="/images/facebook.svg" alt="">
-                                    <img src="/images/twitter.svg" alt="">
-                                    <img src="/images/linkdin.svg" alt="">
+                                    <img src="images/facebook.svg" alt="">
+                                    <img src="images/twitter.svg" alt="">
+                                    <img src="images/linkdin.svg" alt="">
                                 </div>
                             </div>
                             <div class="flex flex-col items-center">
-                                <img src="/images/member2.png" alt="" class="rounder-full mb-8">
+                                <img src="images/member2.png" alt="" class="rounder-full mb-8">
                                 <h1 class="text-2xl mb-2 font-bold">Safia Chowdhury</h1>
                                 <h1 class="text-xl mb-4 font-medium">Fruits Expert</h1>
                                 <div class="flex flex-row gap-2">
-                                    <img src="/images/facebook.svg" alt="">
-                                    <img src="/images/twitter.svg" alt="">
-                                    <img src="/images/linkdin.svg" alt="">
+                                    <img src="images/facebook.svg" alt="">
+                                    <img src="images/twitter.svg" alt="">
+                                    <img src="images/linkdin.svg" alt="">
                                 </div>
                             </div>
                             <div class="flex flex-col items-center">
-                                <img src="/images/member3.png" alt="" class="rounder-full mb-8">
+                                <img src="images/member3.png" alt="" class="rounder-full mb-8">
                                 <h1 class="text-2xl mb-2 font-bold">Rokib Hossain</h1>
                                 <h1 class="text-xl mb-4 font-medium">Fruits Expert</h1>
                                 <div class="flex flex-row gap-2">
-                                    <img src="/images/facebook.svg" alt="">
-                                    <img src="/images/twitter.svg" alt="">
-                                    <img src="/images/linkdin.svg" alt="">
+                                    <img src="images/facebook.svg" alt="">
+                                    <img src="images/twitter.svg" alt="">
+                                    <img src="images/linkdin.svg" alt="">
                                 </div>
                             </div>
                             <div class="flex flex-col items-center">
-                                <img src="/images/member4.png" alt="" class="rounder-full mb-8">
+                                <img src="images/member4.png" alt="" class="rounder-full mb-8">
                                 <h1 class="text-2xl mb-2 font-bold">Chaity</h1>
                                 <h1 class="text-xl mb-4 font-medium">Fruits Expert</h1>
                                 <div class="flex flex-row gap-2">
-                                    <img src="/images/facebook.svg" alt="">
-                                    <img src="/images/twitter.svg" alt="">
-                                    <img src="/images/linkdin.svg" alt="">
+                                    <img src="images/facebook.svg" alt="">
+                                    <img src="images/twitter.svg" alt="">
+                                    <img src="images/linkdin.svg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -356,7 +376,7 @@
                         <div class="flex flex-row h-1/3">
                             <div
                                 class="w-[60px] h-[60px] rounded-full bg-slate-100 flex flex-col justify-center items-center">
-                                <img src="/images/dedicated.svg" alt="" class="w-6 h-6">
+                                <img src="images/dedicated.svg" alt="" class="w-6 h-6">
                             </div>
                             <div class="w-4/5 ml-8">
                                 <h1 class="text-xl font-extrabold mb-4 text-left">Dedicated Team</h1>
@@ -369,7 +389,7 @@
                         <div class="flex flex-row h-1/3">
                             <div
                                 class="w-[60px] h-[60px] rounded-full bg-slate-100 flex flex-col justify-center items-center">
-                                <img src="/images/love.svg" alt="" class="w-6 h-6">
+                                <img src="images/love.svg" alt="" class="w-6 h-6">
                             </div>
                             <div class="w-4/5 ml-8">
                                 <h1 class="text-xl font-extrabold mb-4 text-left">Fresh is Best</h1>
@@ -382,7 +402,7 @@
                         <div class="flex flex-row h-1/3">
                             <div
                                 class="w-[60px] h-[60px] rounded-full bg-slate-100 flex flex-col justify-center items-center">
-                                <img src="/images/gift.svg" alt="" class="w-6 h-6">
+                                <img src="images/gift.svg" alt="" class="w-6 h-6">
                             </div>
                             <div class="w-4/5 ml-8">
                                 <h1 class="text-xl font-extrabold mb-4 text-left">Gift Certificates</h1>
@@ -396,14 +416,14 @@
                     </div>
 
                     <div class="w-1/3">
-                        <img src="/images/whychoose1.png" alt="">
+                        <img src="images/whychoose1.png" alt="">
                     </div>
 
                     <div class="w-1/3 flex flex-col gap-12 pl-2">
                         <div class="flex flex-row-reverse h-1/3">
                             <div
                                 class="w-[60px] h-[60px] rounded-full bg-slate-100 flex flex-col justify-center items-center">
-                                <img src="/images/supplier.svg" alt="" class="w-6 h-6">
+                                <img src="images/supplier.svg" alt="" class="w-6 h-6">
                             </div>
                             <div class="w-4/5 ml-8">
                                 <h1 class="text-xl font-extrabold mb-4 text-left">Integrated Supplier</h1>
@@ -416,7 +436,7 @@
                         <div class="flex flex-row-reverse h-1/3">
                             <div
                                 class="w-[60px] h-[60px] rounded-full bg-slate-100 flex flex-col justify-center items-center">
-                                <img src="/images/practice.svg" alt="" class="w-6 h-6">
+                                <img src="images/practice.svg" alt="" class="w-6 h-6">
                             </div>
                             <div class="w-4/5 ml-8">
                                 <h1 class="text-xl font-extrabold mb-4 text-left">Sustainable Practice</h1>
@@ -429,7 +449,7 @@
                         <div class="flex flex-row-reverse h-1/3">
                             <div
                                 class="w-[60px] h-[60px] rounded-full bg-slate-100 flex flex-col justify-center items-center">
-                                <img src="/images/benefit.svg" alt="" class="w-6 h-6">
+                                <img src="images/benefit.svg" alt="" class="w-6 h-6">
                             </div>
                             <div class="w-4/5 ml-8">
                                 <h1 class="text-xl font-extrabold mb-4 text-left">The Benefits Only</h1>
@@ -446,7 +466,7 @@
 
     <footer class="bg-[#121212] text-white flex flex-col justify-center items-center mt-36">
         <div class="flex flex-row justify-center items-center mt-36">
-            <img src="/images/logo.png" alt="" class="m-2">
+            <img src="images/logo.png" alt="" class="m-2">
             <h1 class="font-bold text-5xl">Fruit Burst</h1>
         </div>
         <div class="flex flex-row gap-14 mt-16">
@@ -459,12 +479,12 @@
         </div>
 
         <div class="flex flex-row gap-10 mt-16 mb-36">
-            <img src="/images/facebook_2.svg" alt="">
-            <img src="/images/twitter_2.svg" alt="">
-            <img src="/images/linkdin_2.svg" alt="">
-            <img src="/images/youtube.svg" alt="">
-            <img src="/images/insta.svg" alt="">
-            <img src="/images/apple.svg" alt="">
+            <img src="images/facebook_2.svg" alt="">
+            <img src="images/twitter_2.svg" alt="">
+            <img src="images/linkdin_2.svg" alt="">
+            <img src="images/youtube.svg" alt="">
+            <img src="images/insta.svg" alt="">
+            <img src="images/apple.svg" alt="">
         </div>
 
     </footer>
